<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".ImcActivity">

        <TextView
            style="@style/TextViewForm"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imc_desc" />

        <EditText
            android:id="@+id/edit_weight"

            style="@style/EditText"
            android:hint="@string/edit_weight_hint"
            android:importantForAutofill="no"
            android:maxLength="5" />

        <EditText
            android:id="@+id/edit_height"

            style="@style/EditText"
            android:hint="@string/edit_height_hint"
            android:importantForAutofill="no"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_send"

            style="@style/Button"
            android:text="@string/btn_send_text" />

    </LinearLayout>

</ScrollView>

